fix(dark theme): make colors more contrast

--- a/src/app/styles/themes/_dark.scss
+++ b/src/app/styles/themes/_dark.scss
@@ -1,12 +1,12 @@
 body[data-theme="dark"] {
-	--bg-color: rgb(13 13 13);
-	--bg-light-color: rgb(18 18 18);
+	--bg-color: rgb(16 16 16);
+	--bg-light-color: rgb(22 22 22);
 	--primary-color: rgb(100 140 255);
 	--primary-color-bg: rgb(100 140 255 / 10%);
 	--primary-color-hover: rgb(100 140 255 / 20%);
 	--secondary-color: rgb(4 73 224);
 	--on-bg-primary: rgb(216 216 216);
 	--on-bg-secondary: rgb(216 216 216);
-	--on-bg-secondary-hover: rgb(216 216 216 / 2%);
+	--on-bg-secondary-hover: rgb(216 216 216 / 8%);
 	--overlay-color: rgb(0 0 0 / 70%);
 }
